# vqa-2

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
annotation/: annotation_ready.py  annotator.py  eda.ipynb  progressfiles.py  relevant_generator.py  verify.ipynb
annotation/relevants/all/: compiled_data.csv  compiled_data.json  compiled_relevant.json  f1_relevant_latest.json  f2_relevant_latest.json  f3_relevant_latest.json  f4_relevant_latest.json  f5_relevant_latest.json  p10_relevant_latest.json  p11_relevant_latest.json  p1_relevant_latest.json  p1_relevant_latest_xtra.json  p2_relevant_latest.json  p3_relevant_latest.json  p4_relevant_latest.json  p5_relevant_latest.json  p5_relevant_latest_Chunk10.json  p6_relevant_latest.json  p7_relevant_latest.json  p7_relevant_latest_Chunk3.json  p8_relevant_latest.json  p9_relevant_latest.json  test_data.csv  test_data.json
annotation/relevants/f_1/: annotator_01_irrelevant.json  annotator_1_relevant.json  f1_irrelevant_latest.json  f1_relevant_latest.json  relevant_01.json
annotation/relevants/f_2/: annotator_2_relevant.json  f2_irrelevant_latest.json  f2_relevant_latest.json  relevant (27).json
annotation/relevants/f_3/: annotator_3_relevant.json  f3_irrelevant_latest.json  f3_relevant_latest.json
annotation/relevants/f_5/: relevant_8.json  (+3 more)
annotation/resource/: progress.csv  progress.json  relevant.json
vqa_next/: claude_cost.txt  code_prep.ipynb  gemini_generate.ipynb  gemini_qa.ipynb  llm_based_basic.ipynb  ollama-llava.ipynb  openai_cost.txt  scoring.ipynb  visualisations.ipynb
(+60 files in other folders)
