[tool.poetry]
name = "vqa-next"
version = "0.1.0"
description = ""
authors = ["Sourove <souroveskb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.41.1"
matplotlib = "^3.10.0"
python-dotenv = "^1.0.1"
tqdm = "^4.67.1"
openai = "^1.61.1"
anthropic = "^0.45.2"
google-generativeai = "^0.8.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
